@@ -9,6 +9,7 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
    no longer works but gives an error.
    Old behaviour can be restored by the commandline flag '--XX-oldlambda' (interpreter only).
  * changed fixnums from 64 bit to 54 bit (53 bits + 1 sign bit)
+ * changed internal-time-units-per-second to integer
 
  * added the global variables "most-positive-fixnum" and "most-negative-fixnum"
  * added the special operators catch, throw and unwind-protect
